[package]
name = "memory"
version = "0.1.0"
authors = ["cuerposaco <ivan.rtve@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sixtyfps = "0.0.4"
rand = "0.7" # Added
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
rand = { version = "0.7", features = ["wasm-bindgen"] }

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]
